examples/issues/issue_1251_f/expected/bar_apps_v1_ingress_bar.yaml
apiVersion: apps/v1
kind: Ingress
metadata:
  name: bar
  namespace: bar
spec:
  rules:
  - host: bar-branch.dev.domain.com
    http:
      paths:
      - backend:
          serviceName: bar
          servicePort: http
