examples/issues/issue_1251_f/expected/bar_extensions_v1beta1_ingress_bar.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bar
  namespace: bar
spec:
  rules:
  - host: bar-branch.dev.domain.com
    http:
      paths:
      - backend:
          serviceName: bar
          servicePort: http
