examples/issues/issue_1251_f/expected/foo_extensions_v1beta1_ingress_foo.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: foo
  namespace: foo
spec:
  rules:
  - host: foo-branch.dev.domain.com
    http:
      paths:
      - backend:
          serviceName: foo
          servicePort: http
